--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <p>
           <label>Message: <textarea name="message"></textarea></label>
         </p>
+
+        <p><input type="file"></p>
+
+        <div data-netlify-recaptcha="true"></div>
+
         <p>
           <button type="submit">Send</button>
         </p>
