--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Contact Me</h2>
     <form name="My Contact Form" method="POST" data-netlify="true">
         <p>
-          <label>Your Name: <input type="text" name="name" /></label>   
+          <label>Your Name: <input type="text" name="name" required/></label>   
         </p>
         <p>
           <label>Your Email: <input type="email" name="email" /></label>
@@ -46,7 +46,7 @@
           </select></label>
         </p>
         <p>
-          <label>Message: <textarea name="message"></textarea></label>
+          <label>Message: <textarea name="message" required></textarea></label>
         </p>
 
         <p><input type="file"></p>
