--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="img/evan_img.jpg" alt="A picture of me">
 
     <h2>Contact Me</h2>
-    <form name="My Contact Form" method="POST" data-netlify="true">
+    <form name="My Contact Form" method="POST" data-netlify="true" data-netlify-recaptcha="true">
         <p>
           <label>Your Name: <input type="text" name="name" required/></label>   
         </p>
