--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-
+<!-- Remove this -->
     <h1>Evan W. Olson</h1>
 
     <h2>Favorite Things</h2>
@@ -31,6 +31,8 @@
 
     <img src="img/evan_img.jpg" alt="A picture of me">
 
+
+    <!-- Contact Form -->
     <h2>Contact Me</h2>
     <form name="My Contact Form" method="POST" data-netlify="true" data-netlify-recaptcha="true">
         <p>
