--- a/index.html
+++ b/index.html
@@ -16,52 +16,35 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&display=swap" rel="stylesheet">
 </head>
+
+
+
 <body>
-<!-- Remove this -->
-    <h1>Evan W. Olson</h1>
 
-    <h2>Favorite Things</h2>
-    <ul>
-        <li>God</li>
-        <li>Movies</li>
-        <li>Music</li>
-    </ul>
+	<main>
 
-    <img src="img/evan_img.jpg" alt="A picture of me">
+		<div class="headers">
+			<h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1>
 
+			<h2>Evan Olson, Creative</h2>
+		</div>
 
-    <!-- Contact Form -->
-    <h2>Contact Me</h2>
-    <form name="My Contact Form" method="POST" data-netlify="true" data-netlify-recaptcha="true">
-        <p>
-          <label>Your Name: <input type="text" name="name" required/></label>   
-        </p>
-        <p>
-          <label>Your Email: <input type="email" name="email" /></label>
-        </p>
-        <p>
-          <label>Your Role: <select name="role[]" multiple>
-            <option value="leader">Leader</option>
-            <option value="follower">Follower</option>
-          </select></label>
-        </p>
-        <p>
-          <label>Message: <textarea name="message" required></textarea></label>
-        </p>
+		<div class="copy">
+			<p>I love learning.<br>I love perfecting.<br>I’m not satisfied to become a “Jack of All Trades and a master of none.” I have created award winning video, critically acclaimed writings, effective designs, highly desired photos, and music that audiences love.</p>
 
-        <p><input type="file"></p>
+			<p>Everything I work on, helps the other. My films and writings are infused with life given by music. My photos and designs feed off each other to create works that are crafted to a high quality.</p>
 
-        <div data-netlify-recaptcha="true"></div>
+			<p>Art is my life and I am happy to work with others to craft their vision. I strive for understanding and empathy throughout my life and believe that this skill helps me to help you.</p>
 
-        <p>
-          <button type="submit">Send</button>
-        </p>
-      </form>
-      
+		</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.5.6/plyr.min.js"></script>
-    <script src="js/scripts.js"></script>
+		<div class="image">
+			<img src="img/evan_hero.JPG" alt="Evan Olson" />
+		</div>
+
+	</main>
+
 </body>
 </html>
