--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<main>
 
 		<div class="headers">
-			<h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1>
+      <h1><a href="#">Film </a><br><a href="#">Writing </a><br><a href="#">Design </a><br><a href="#">Photo </a><br><a href="#">Music </a><br></h1>
+			<!-- <h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1> -->
 
 			<h2>Evan Olson, Creative</h2>
 		</div>
@@ -36,7 +37,7 @@
 
 			<p>Everything I work on, helps the other. My films and writings are infused with life given by music. My photos and designs feed off each other to create works that are crafted to a high quality.</p>
 
-			<p>Art is my life and I am happy to work with others to craft their vision. I strive for understanding and empathy throughout my life and believe that this skill helps me to help you.</p>
+			<p>Art is my life and I am happy to work with others to craft their vision. I strive for understanding and empathy throughout my life and believe that this skill helps me to help <b>you.</b></p>
       
         <aside>
           <ul>
