--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<main>
 
 		<div class="headers">
-      <h1><a href="#">Film </a><br><a href="#">Writing </a><br><a href="#">Design </a><br><a href="#">Photo </a><br><a href="#">Music </a><br></h1>
+      <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Design </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Photo </a><br><a href="#">Music </a><br></h1>
 			<!-- <h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1> -->
 
 			<h2>Evan Olson, Creative</h2>
@@ -41,8 +41,10 @@
       
         <aside>
           <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">YouTube</a></li>
+            <li><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Instagram</a></li>
+            <li><a href="https://www.youtube.com/channel/UC7kSmXRNFMnBHxyEyfH0iow?view_as=subscriber">YouTube</a></li>
+            <li><a href="https://vimeo.com/ewolson">Vimeo</a></li>
+            <li><a href="mailto:eolson99@icloud.com">Contact</a></li>
           </ul>
         </aside>
 
