--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,8 +17,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=RalewayRaleway:300,400,500,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=RalewayRaleway:300,400,500,700,800&amp;display=swap" rel="stylesheet">
 </head>
 
 
@@ -27,18 +28,18 @@
 	<main>
 
 		<div class="headers">
-      <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Design </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Photo </a><br><a href="#">Music </a><br></h1>
+      <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Photo </a></h1>
 			<!-- <h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1> -->
 
-			<h2>Evan Olson, Creative</h2>
+			<h2>Evan W. Olson, Creative</h2>
 		</div>
 
 		<div class="copy">
-			<p>I love learning.<br>I love perfecting.<br>I’m not satisfied to become a “Jack of All Trades and a master of none.” I have created award winning video, critically acclaimed writings, effective designs, highly desired photos, and music that audiences love.</p>
+			<p>I believe we were created to be creative. Our ability to tell stories is one of the many gifts we have been given as humans. I therefore take this responsibilty seriously.</p>
 
-			<p>Everything I work on, helps the other. My films and writings are infused with life given by music. My photos and designs feed off each other to create works that are crafted to a high quality.</p>
+			<p>In all of my mediums, it is my goal to create moments of peace, joy, goodness, and compassion. I accomplish this by creating worlds we long for, or by revealing our shortcomings so that we can learn, lament, and build empathy and sympathy</p>
 
-			<p>Art is my life and I am happy to work with others to craft their vision. I strive for understanding and empathy throughout my life and believe that this skill helps me to help <b>you.</b></p>
+			<p>Art is my life and I am happy to work with others to craft their visions. I strive for understanding throughout my life and believe that this skill helps me to help <b>you.</b></p>
       
         <aside>
           <ul>
@@ -52,10 +53,11 @@
 		</div>
 
 		<div class="image">
-			<img src="img/evan_hero.JPG" alt="Evan Olson" />
+			<img src="img/evan_hero.JPG" alt="Evan Olson">
 		</div>
 
 	</main>
+
 
 </body>
 </html>
