--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=RalewayRaleway:300,400,500,700,800&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=RalewayRaleway:300,400,500,700,800&display=swap" rel="stylesheet">
 </head>
 
 
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="image">
-			<img src="img/evan_hero.JPG" alt="Evan Olson">
+			<img src="img/evan_hero.JPG" alt="Evan Olson" />
 		</div>
 
 	</main>
