Overwriting to more updated code
Mostly changed fonts

--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
+    <!--Adding Josefin Sans as Body Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Yeseva+One&display=swap" rel="stylesheet">
+
+    <!--Adding Yeseva One as Header Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,500,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=RalewayRaleway:300,400,500,700,800&display=swap" rel="stylesheet">
+
+
 </head>
 
 
@@ -28,7 +39,7 @@
 	<main>
 
 		<div class="headers">
-      <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Photo </a></h1>
+      <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evanwolsonphotography/">Photo </a></h1>
 			<!-- <h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1> -->
 
 			<h2>Evan W. Olson, Creative</h2>
@@ -43,7 +54,7 @@
       
         <aside>
           <ul>
-            <li><a href="https://www.instagram.com/evenevan.mp4/?hl=en">Instagram</a></li>
+            <li><a href="https://www.instagram.com/evanwolsonphotography/">Instagram</a></li>
             <li><a href="https://www.youtube.com/channel/UC7kSmXRNFMnBHxyEyfH0iow?view_as=subscriber">YouTube</a></li>
             <li><a href="https://vimeo.com/ewolson">Vimeo</a></li>
             <li><a href="mailto:eolson99@icloud.com">Contact</a></li>
