Update CSS and Index
Changed colors and fonts

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-    <!--Adding Josefin Sans as Body Font-->
+    <!--Connecting to Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Yeseva+One&display=swap" rel="stylesheet">
 
-    <!--Adding Yeseva One as Header Font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <!--Adding Josefin Sans (Body) and Cardo (Header) Font-->
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
 
@@ -40,26 +37,26 @@
 
 		<div class="headers">
       <h1><a href="https://vimeo.com/ewolson">Film </a><br><a href="#">Writing </a><br><a href="https://www.instagram.com/evanwolsonphotography/">Photo </a></h1>
-			<!-- <h1>Film <br>Writing <br>Design <br>Photo <br>Music</h1> -->
+			
 
 			<h2>Evan W. Olson, Creative</h2>
 		</div>
 
 		<div class="copy">
-			<p>I believe we were created to be creative. Our ability to tell stories is one of the many gifts we have been given as humans. I therefore take this responsibilty seriously.</p>
+			<p>I believe we were created to be creative. Our ability to tell stories is one of the many gifts we have been given as humans. I therefore take this responsibilty seriously.</p><br>
 
-			<p>In all of my mediums, it is my goal to create moments of peace, joy, goodness, and compassion. I accomplish this by creating worlds we long for, or by revealing our shortcomings so that we can learn, lament, and build empathy and sympathy</p>
+			<p>In all of my mediums, it is my goal to create moments of peace, joy, goodness, and compassion. I accomplish this by creating worlds we long for, or by revealing our shortcomings so that we can learn, lament, and build empathy and sympathy</p><br>
 
-			<p>Art is my life and I am happy to work with others to craft their visions. I strive for understanding throughout my life and believe that this skill helps me to help <b>you.</b></p>
+			<p>Art is my life and I am happy to work with others to craft their visions. I strive for understanding throughout my life and believe that this skill helps me to help <span class="boldBody">you.</span></p><br>
       
-        <aside>
+        <aside><span class="boldBody">
           <ul>
             <li><a href="https://www.instagram.com/evanwolsonphotography/">Instagram</a></li>
             <li><a href="https://www.youtube.com/channel/UC7kSmXRNFMnBHxyEyfH0iow?view_as=subscriber">YouTube</a></li>
             <li><a href="https://vimeo.com/ewolson">Vimeo</a></li>
             <li><a href="mailto:eolson99@icloud.com">Contact</a></li>
           </ul>
-        </aside>
+        </span></aside>
 
 		</div>
 
